# declaration-spotter

./: .gitignore  Cargo.toml  Makefile  README.md
examples/: simple_kat_export.rs
kannspec/: declaration-annotations.xml  declaration-annotations.xml.old
src/: kat_export.rs  lib.rs  mathanalyzer.rs  spotter.rs
tests/resources/: 0903.1000.annotated.html  1311.0066.annotated.xhtml
